cloudformation/jenkins-on-ec2.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Jenkins Stack'

Parameters:
  Project:
    Type: String
  TraineeName:
    Type: String
  PublicHostedZoneName:
    Description: The Route53 Zone in which to create records
    Type: String
  InstanceType:
    Type: String
    Description: The instance type
    Default: t2.micro
  ImageId:
    Type: String
    Description: The instance ami id

Resources:
  JenkinsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Jenkins instance
      VpcId:
        Fn::ImportValue: !Sub "${Project}-vpc-id"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${Project}-${TraineeName}-Jenkins-security-group"

  JenkinsInstance:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId:
        Fn::ImportValue: !Sub "${Project}-public-subnet-a"
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: !Ref Project
      BlockDeviceMappings:
      - DeviceName: /dev/xvda
        Ebs:
          VolumeSize: 80
          VolumeType: gp2
          DeleteOnTermination: true
      SecurityGroupIds:
        - !Ref JenkinsSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub "${Project}-${TraineeName}-jenkins-instance"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -ex

          # Install Jenkins
          yum update -y
          yum remove -y java-1.7.0-openjdk
          yum install -y java-1.8.0
          wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat/jenkins.repo
          rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key
          yum install -y jenkins
          service jenkins start

  JenkinsDomainName:
    Type: AWS::Route53::RecordSet
    Properties:
      Name: !Sub "${TraineeName}.${PublicHostedZoneName}"
      HostedZoneName: !Ref PublicHostedZoneName
      Comment: !Sub "DomainName - ${TraineeName}"
      Type: CNAME
      TTL: 300
      ResourceRecords:
      - !GetAtt JenkinsInstance.PublicDnsName
