cloudformation/jenkins-with-https.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Jenkins Stack'

Parameters:
  Project:
    Type: String
  TraineeName:
    Type: String
  PublicHostedZoneName:
    Description: The Route53 Zone in which to create records
    Type: String
  InstanceType:
    Type: String
    Description: The instance type
    Default: t2.micro
  ImageId:
    Type: String
    Description: The instance ami id
  ASGMaxSize:
    Description: The maximum instance number in Auto Scaling group
    Type: Number
    Default: 1
  ASGMinSize:
    Description: The minimum instance number in Auto Scaling group
    Type: Number
    Default: 1
  CertificateARN:
    Type: String
    Description: The Certificate Manager ARN

Resources:
  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /login
      HealthCheckPort: traffic-port
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      UnhealthyThresholdCount: 3
      Matcher:
        HttpCode: 200
      Name: !Sub "${TraineeName}-target"
      Protocol: HTTP
      Port: 8080
      VpcId:
        Fn::ImportValue: !Sub "${Project}-vpc-id"

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Jenkins ALB
      VpcId:
        Fn::ImportValue: !Sub "${Project}-vpc-id"
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: 443
        ToPort: 443

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub "${TraineeName}-jenkins-alb"
      Scheme: internet-facing
      Subnets:
        - Fn::ImportValue: !Sub "${Project}-public-subnet-a"
        - Fn::ImportValue: !Sub "${Project}-public-subnet-b"
      SecurityGroups:
        - Ref: ALBSecurityGroup

  ALBHTPPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup

  ALBHTPPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

  ALBHTPPSListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 443
      Protocol: HTTPS
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref ALBTargetGroup
      Certificates:
      - CertificateArn: !Ref CertificateARN

  JenkinsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Jenkins instance
      VpcId:
        Fn::ImportValue: !Sub "${Project}-vpc-id"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${TraineeName}-Jenkins-security-group"

  JenkinsASLaunchConf:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
        ImageId: !Ref ImageId
        InstanceType: !Ref InstanceType
        KeyName: !Ref Project
        SecurityGroups:
          - !Ref JenkinsSecurityGroup
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash -ex

            # Install Jenkins
            yum update -y
            yum remove -y java-1.7.0-openjdk
            yum install -y java-1.8.0
            wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat/jenkins.repo
            rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key
            yum install -y jenkins
            service jenkins start

            # Signal when an instance creation process has completed successfully
            /opt/aws/bin/cfn-signal -e 0 -r "Jenkins instance Stack complete." '${WaitHandle}'

  JenkinsASGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
        - Fn::ImportValue: !Sub "${Project}-public-subnet-a"
        - Fn::ImportValue: !Sub "${Project}-public-subnet-b"
      LaunchConfigurationName: !Ref JenkinsASLaunchConf
      MinSize: !Ref ASGMinSize
      MaxSize: !Ref ASGMaxSize
      TargetGroupARNs:
        - !Ref ALBTargetGroup
      Tags:
        - Key: Name
          Value: !Sub "${TraineeName}-jenkins"
          PropagateAtLaunch: true

  WaitHandle:
    Type: AWS::CloudFormation::WaitConditionHandle

  WaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    Properties:
      Handle: !Ref WaitHandle
      Timeout: 1500

  JenkinsDomainName:
    Type: AWS::Route53::RecordSet
    Properties:
      Name: !Sub "${TraineeName}.${PublicHostedZoneName}"
      HostedZoneName: !Ref PublicHostedZoneName
      Comment: !Sub "DomainName - ${TraineeName}"
      Type: CNAME
      TTL: 300
      ResourceRecords:
      - !GetAtt ApplicationLoadBalancer.DNSName
